update gradle tools

--- a/src/android/intercom.gradle
+++ b/src/android/intercom.gradle
@@ -13,7 +13,7 @@ buildscript {
         maven { url 'https://maven.google.com' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.+'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         if (pushType == 'fcm') {
             classpath 'com.google.gms:google-services:3.2.0'
         }
