--- a/src/android/intercom.gradle
+++ b/src/android/intercom.gradle
@@ -26,12 +26,12 @@ repositories {
 }
 
 dependencies {
-    compile 'io.intercom.android:intercom-sdk-base:5.1.+'
+    implementation 'io.intercom.android:intercom-sdk-base:5.5.1'
     if (pushType == 'gcm') {
-        compile 'io.intercom.android:intercom-sdk-gcm:5.1.+'
+        implementation 'io.intercom.android:intercom-sdk-gcm:5.5.1'
     } else if (pushType == 'fcm' || pushType == 'fcm-without-build-plugin') {
-        compile 'com.google.firebase:firebase-messaging:11.+'
-        compile 'io.intercom.android:intercom-sdk-fcm:5.1.+'
+        implementation 'com.google.firebase:firebase-messaging:20.1.3'
+        implementation 'io.intercom.android:intercom-sdk-fcm:5.5.1'
     }
 }
 
